<resources>
    <string name="app_name">糖纸</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="error_load_product">Oops!网络开小差了，请稍后再试</string>
    <string name="follow">关注</string>
    <string name="followed">已关注</string>
    <string name="indexes">模范指数</string>
    <string name="product_summary">产品简介</string>
    <string name="product_param">产品参数</string>
    <string name="product_posts">评测怎么看</string>
    <string name="product_posts_total">全部文章 %d</string>
    <string name="product_related_product">相关产品</string>
    <string name="product_related_product_total">全部产品 %d</string>
    <string name="product_related_product_more">查\n看\n更\n多</string>
    <string name="product_list_count">全部 %d 个</string>
    <string name="product_list_title">糖纸清单</string>
    <string name="product_list_size">全部清单 %d</string>
    <string name="proodict_indexes_dialog_title">糖纸模范指数详情</string>
    <string name="proodict_indexes_dialog_rule">模范指数=用户评分*0.5+机构评分*0.5</string>
    <string name="proodict_indexes_dialog_user">用户评分</string>
    <string name="profile_item_avatar">头像</string>
    <string name="profile_item_nickname">昵称</string>
    <string name="profile_item_motto">简介</string>
    <string name="profile_item_profession">职业</string>
    <string name="profile_item_phone">手机</string>
    <string name="profile_item_address">收货地址</string>
    <string name="profile_item_banner">背景</string>
    <string name="save">保存</string>
    <string name="update_profile_title">编辑资料</string>
    <string name="points_record_type_all">全部</string>
    <string name="points_record_type_content">发表内容</string>
    <string name="points_record_type_reply">参与回复</string>
    <string name="points_record_type_testing">参与众测</string>
    <string name="points_record_type_item_list">清单奖励</string>
    <string name="points_record_type_system">系统奖励</string>
    <string name="points_record_type_revoke">积分回收</string>
    <string name="sign_in">登录</string>
    <string name="sign_in_title">登录</string>
    <string name="sign_in_sub_title">社交账号快捷登录</string>
    <string name="sign_in_wechat">微信登录</string>
    <string name="sign_in_email">邮箱登录</string>
    <string name="sign_in_email_tip">仅支持爱范儿邮箱账号登录</string>
    <string name="sign_in_by_phone">手机号注册新账号或登录></string>
    <string name="sign_in_by_email_title">邮箱登录</string>
    <string name="sign_in_by_email_hint">请输入邮箱账号</string>
    <string name="sign_in_by_email_pwd_hint">请输入密码</string>
    <string name="update_profile_motto_hint">糖纸，好产品说明书</string>
    <string name="update_profile_profession_hint">填写职业信息</string>
    <string name="update_profile_phone_hint">绑定手机号码</string>
    <string name="update_profile_address_hint">填写收货地址</string>
    <string name="update_profile_nickname_hint">填写昵称</string>
    <string name="comment_option_share">分享给好友</string>
    <string name="comment_option_copy">复制</string>
    <string name="comment_option_update">编辑</string>
    <string name="comment_option_delete">删除</string>
    <string name="comment_option_catch">举报</string>
    <string name="comment_option_cancel">取消</string>
    <string name="user_contract_content">
        【首部及导言】\n

        \t\t\t\t欢迎您使用爱范儿的服务\n

        \t\t\t\t为使用爱范儿的服务，您应当阅读并遵守《爱范儿服务协议》（以下简称“本协议”）。请您务必审慎阅读、充分理解
        各条款内容，特别是免除或者限制责任的条款、管辖与法律适用条款，以及开通或使用某项服务的单独协议。限制、
        免责条款可能以黑体加粗或加下划线的形式提示您重点注意。除非您已阅读并接受本协议所有条款，否则您无权使用
        爱范儿提供的服务。您使用爱范儿的服务即视为您已阅读并同意上述协议的约束。如果您未满18周岁，请在法定监护人的
        陪同下阅读本协议，并特别注意未成年人使用条款。\n\n\n

        一、【协议的范围】\n

        \t\t\t\t1.1 本协议由您与爱范儿科技股份有限公司（简称“ifanr”）签订。“ifanr”是指爱范儿科技股份有限公司
        及其相关服务可能存在的运营关联单位。“用户”是指使用爱范儿相关服务的使用人，在本协议中更多地称为“您”。\n

        \t\t\t\t1.2 本协议项下的服务是指爱范儿向用户提供的包括但不限于网络媒体、互联网增值、互动娱乐、电子商务和
        广告等产品及服务（以下简称“本服务”）。\n\n\n

        二、【帐号与密码安全】\n

        \t\t\t\t2.1 您在使用爱范儿的服务时可能需要注册一个帐号。爱范儿特别提醒您应妥善保管您的帐号和密码。
        当您使用完毕后，应安全退出。因您保管不善可能导致遭受盗号或密码失窃，责任由您自行承担。\n\n\n

        三、【用户个人信息保护】\n

        \t\t\t\t3.1 您在注册帐号或使用本服务的过程中，可能需要填写一些必要的信息。若国家法律法规有特殊规定的，
        您需要填写真实的身份信息。若您填写的信息不完整，则无法使用本服务或在使用过程中受到限制。\n

        \t\t\t\t3.2 一般情况下，您可随时浏览、修改自己提交的信息，但出于安全性和身份识别（如号码申诉服务）的考虑，
        您可能无法修改注册时提供的初始注册信息及其他验证信息。\n

        \t\t\t\t3.3 爱范儿将运用各种安全技术和程序建立完善的管理制度来保护您的个人信息，以免遭受未经授权的访问、
        使用或披露。\n

        \t\t\t\t3.4 爱范儿不会将您的个人信息转移或披露给任何非关联的第三方，除非：\n
        \t\t\t\t（1）相关法律法规或法院、政府机关要求；\n
        \t\t\t\t（2）为完成合并、分立、收购或资产转让而转移；\n
        \t\t\t\t（3）为提供您要求的服务所必需。\n

        \t\t\t\t3.5 爱范儿非常重视对未成年人个人信息的保护。若您是18周岁以下的未成年人，在使用爱范儿的服务前，应事先
        取得您家长或法定监护人（以下简称"监护人"）的书面同意。\n\n\n

        四、【使用本服务的方式】\n

        \t\t\t\t4.1 除非您与爱范儿另有约定，您同意本服务仅为您个人非商业性质的使用。\n
        \t\t\t\t4.2 您应当通过爱范儿提供或认可的方式使用本服务。您依本协议条款所取得的权利不可转让。\n
        \t\t\t\t4.3 您不得使用未经爱范儿授权的插件、外挂或第三方工具对本协议项下的服务进行干扰、破坏、修改或施加
        其他影响。\n\n\n

        五、【按现状提供服务】\n

        \t\t\t\t您理解并同意，爱范儿的服务是按照现有技术和条件所能达到的现状提供的。爱范儿会尽最大努力向您提供
        服务，确保服务的连贯性和安全性；但爱范儿不能随时预见和防范法律、技术以及其他风险，包括但不限于不可抗力、
        病毒、木马、黑客攻击、系统不稳定、第三方服务瑕疵、政府行为等原因可能导致的服务中断、数据丢失以及其他的损失
        和风险。\n\n\n

        六、【自备设备】\n

        \t\t\t\t6.1 您应当理解，您使用爱范儿的服务需自行准备与相关服务有关的终端设备（如电脑、调制解调器等装置），
        并承担所需的费用（如电话费、上网费等费用）。\n
        \t\t\t\t6.2 您理解并同意，您使用本服务时会耗用您的终端设备和带宽等资源。\n\n\n


        七、【广告】\n

        \t\t\t\t7.1 您同意爱范儿可以在提供服务的过程中自行或由第三方广告商向您发送广告、推广或宣传信息（包括商业
        与非商业信息），其方式和范围可不经向您特别通知而变更。\n

        \t\t\t\t7.2 爱范儿依照法律的规定对广告商履行相关义务，您应当自行判断广告信息的真实性并为自己的判断行为
        负责，除法律明确规定外，您因依该广告信息进行的交易或前述广告商提供的内容而遭受的损失或损害，爱范儿不承担
        责任。\n

        \t\t\t\t7.3 您同意，对爱范儿服务中出现的广告信息，您应审慎判断其真实性和可靠性，除法律明确规定外，
        您应对依该广告信息进行的交易负责。\n\n\n

        八、【收费服务】\n

        \t\t\t\t8.1 爱范儿的部分服务是以收费方式提供的，如您使用收费服务，请遵守相关的协议。\n
        \t\t\t\t8.2 爱范儿可能根据实际需要对收费服务的收费标准、方式进行修改和变更，爱范儿也可能会对部分免费服务
        开始收费。前述修改、变更或开始收费前，爱范儿将在相应服务页面进行通知或公告。如果您不同意上述修改、变更或
        付费内容，则应停止使用该服务。\n\n\n

        九、【第三方提供的产品或服务】\n

        \t\t\t\t您在爱范儿平台上使用第三方提供的产品或服务时，除遵守本协议约定外，还应遵守第三方的用户协议。
        爱范儿和第三方对可能出现的纠纷在法律规定和约定的范围内各自承担责任。\n\n\n

        十、【知识产权声明】\n
        \t\t\t\t11.1 爱范儿在本服务中提供的内容（包括但不限于网页、文字、图片、音频、视频、图表等）的知识产权归
        爱范儿所有，用户在使用本服务中所产生的内容的知识产权归用户或相关权利人所有。\n

        \t\t\t\t11.2 除另有特别声明外，爱范儿提供本服务时所依托软件的著作权、专利权及其他知识产权均归爱范儿所有。
        爱范儿的内容产品在非商业使用的前提下以 Creative Commons 授权，但商业使用必须得到明确的商业授权。\n

        \t\t\t\t11.3 爱范儿在本服务中所使用的「ifanr」、「爱范儿」、「知晓云」等商业标识，其著作权或商标权归
        爱范儿所有。\n

        \t\t\t\t11.4 上述及其他任何本服务包含的内容的知识产权均受到法律保护，未经爱范儿、用户或相关权利人书面许可，
        任何人不得以任何形式进行使用或创造相关衍生作品。\n\n\n

        十一、【遵守当地及中国法律监管】\n

        \t\t\t\t13.1 您在使用本服务时，需遵守中华人民共和国的相关法律法规。并尊重当地的道德和风俗习惯。如果您的
        行为违反了当地法律法规或道德风俗，您应当为此独立承担责任。\n

        \t\t\t\t13.2 您应避免因使用本服务而使爱范儿卷入政治和公共事件，否则爱范儿有权暂停或终止对您的服务。\n\n\n

        十二、【用户发送、传播的内容与第三方投诉处理】\n

        \t\t\t\t14.1 您通过本服务发送或传播的内容（包括但不限于网页、文字、图片、音频、视频、图表等）均由您自行
        承担责任。\n

        \t\t\t\t14.2 您发送或传播的内容应有合法来源，相关内容为您所有或您已获得权利人的授权。\n
        \t\t\t\t14.3 您同意爱范儿可为履行本协议或提供本服务的目的而使用您发送或传播的内容。\n
        \t\t\t\t14.4 如果爱范儿收到权利人通知，主张您发送或传播的内容侵犯其相关权利的，您同意爱范儿有权进行独立
        判断并采取删除、屏蔽或断开链接等措施。\n
        \t\t\t\t14.5 您使用本服务时不得违反国家法律法规、侵害他人合法权益。您理解并同意，如您被他人投诉侵权或您
        投诉他人侵权，爱范儿有权将争议中相关方的主体、联系方式、投诉相关内容等必要信息提供给其他争议方或相关部门，
        以便及时解决投诉纠纷，保护他人合法权益。如果因此造成爱范儿损失，包括但不限于产生的罚金、赔偿金、诉讼费、
        律师费等全部由您向爱范儿赔偿。\n\n\n

        十三、【不可抗力及其他免责事由】\n

        \t\t\t\t15.1 您理解并同意，在使用本服务的过程中，可能会遇到不可抗力等风险因素，使本服务发生中断。不可抗力
        是指不能预见、不能克服并不能避免且对一方或双方造成重大影响的客观事件，包括但不限于自然灾害如洪水、地震、
        瘟疫流行和风暴等以及社会事件如战争、动乱、政府行为等。出现上述情况时，爱范儿将努力在第一时间与相关单位配合，
        及时进行修复，但是由此给您造成的损失爱范儿在法律允许的范围内免责。\n

        \t\t\t\t15.2 在法律允许的范围内，爱范儿对以下情形导致的服务中断或受阻不承担责任：\n
        \t\t\t\t（1）受到计算机病毒、木马或其他恶意程序、黑客攻击的破坏；\n
        \t\t\t\t（2）用户或爱范儿的电脑软件、系统、硬件和通信线路出现故障；\n
        \t\t\t\t（3）用户操作不当；\n
        \t\t\t\t（4）用户通过非爱范儿授权的方式使用本服务；\n
        \t\t\t\t（5）其他爱范儿无法控制或合理预见的情形。\n

        \t\t\t\t15.3 您理解并同意，在使用本服务的过程中，可能会遇到网络信息或其他用户行为带来的风险，爱范儿不对
        任何信息的真实性、适用性、合法性承担责任，也不对因侵权行为给您造成的损害负责。这些风险包括但不限于：\n
        \t\t\t\t（1）来自他人匿名或冒名的含有威胁、诽谤、令人反感或非法内容的信息；\n
        \t\t\t\t（2）因使用本协议项下的服务，遭受他人误导、欺骗或其他导致或可能导致的任何心理、生理上的伤害以及
        经济上的损失；\n
        \t\t\t\t（3）其他因网络信息或用户行为引起的风险。\n

        \t\t\t\t15.4 爱范儿依据本协议约定获得处理违法违规内容的权利，该权利不构成爱范儿的义务或承诺，爱范儿不能
        保证及时发现违法行为或进行相应处理。\n\n\n

        十四、【协议的生效与变更】\n
        \t\t\t\t16.1 您使用爱范儿的服务即视为您已阅读本协议并接受本协议的约束。\n
        \t\t\t\t16.2 爱范儿有权在必要时修改本协议条款。您可以在相关服务页面查阅最新版本的协议条款。\n
        \t\t\t\t16.3 本协议条款变更后，如果您继续使用爱范儿提供的软件或服务，即视为您已接受修改后的协议。如果您
        不接受修改后的协议，应当停止使用爱范儿提供的软件或服务。\n\n\n


        十五、【服务的变更、中断、终止】\n
        \t\t\t\t17.1 爱范儿可能会对服务内容进行变更，也可能会中断、中止或终止服务。\n
        \t\t\t\t17.2 您理解并同意，爱范儿有权自主决定经营策略。在爱范儿发生合并、分立、收购、资产转让时，爱范儿
        可向第三方转让本服务下相关资产；爱范儿也可在单方通知您后，将本协议下部分或全部服务转交由第三方运营或履行。
        具体受让主体以爱范儿通知的为准。\n
        \t\t\t\t17.3 如发生下列任何一种情形，爱范儿有权不经通知而中断或终止向您提供的服务：\n
        \t\t\t\t（1）根据法律规定您应提交真实信息，而您提供的个人资料不真实、或与注册时信息不一致又未能提供合理证明；\n
        \t\t\t\t（2）您违反相关法律法规或本协议的约定；\n
        \t\t\t\t（3）按照法律规定或主管部门的要求；\n
        \t\t\t\t（4）出于安全的原因或其他必要的情形。\n

        \t\t\t\t17.4 爱范儿有权按本协议8.2条的约定进行收费。若您未按时足额付费，爱范儿有权中断、中止或终止提供服务。\n
        \t\t\t\t17.5 您有责任自行备份存储在本服务中的数据。如果您的服务被终止，爱范儿可以从服务器上永久地删除
        您的数据,但法律法规另有规定的除外。爱范儿没有义务对非欧盟管辖区的用户返还数据。\n\n\n


        十六、【管辖与法律适用】\n
        \t\t\t\t18.1 本协议的成立、生效、履行、解释及纠纷解决，适用中华人民共和国大陆地区法律（不包括冲突法）。\n
        \t\t\t\t18.2 本协议签订地为广东省广州市海珠区。\n
        \t\t\t\t18.3 若您和爱范儿之间发生任何纠纷或争议，首先应友好协商解决；协商不成时，因本合同引起的或与
        本合同有关的任何争议，均应提交中国国际经济贸易仲裁委员会，按照申请仲裁时该会现行有效的仲裁规则进行仲裁。
        仲裁裁决是终局的，对双方均有约束力。\n
        \t\t\t\t18.4 本协议所有条款的标题仅为阅读方便，本身并无实际涵义，不能作为本协议涵义解释的依据。\n
        \t\t\t\t18.5 本协议条款无论因何种原因部分无效或不可执行，其余条款仍有效，对双方具有约束力。\n\n\n


        For European Users\n

        \t\t\t\tWe are committed to GDPR compliance across our operations across all services
        provided by ifanr Inc, a public company registered in China.\n
        Data Portability &amp; Management Tools\n

        Import\n
        \t\t\t\tWe currently provide tools to import personal profile from WeChat and Weibo.
        Your avatar will be imported from Gravatar automatically. We plan to add more import options
        in the future for feasible functionalities.\n

        Export\n
        \t\t\t\tIt is possible to export all of your personal data from ifanr. Such request
        should be sent to our designated DPO at dpo@ifanr.com. You must produce adequate
        government IDs and account credentials in order to have the request processed.\n

        Account Deletion\n
        \t\t\t\tIt is possible to delete all of your personal data from ifanr. Such request should be
        sent to our designated DPO at dpo@ifanr.com. You must produce adequate government IDs and
        account credentials in order to have the request processed.\n

        Consent\n
        \t\t\t\tWe use cookies to securely identify your account and keep you signed in.
        We use cookie to analyze your interest and serve personalized ads.\n

        \t\t\t\tBy registering an account at ifanr or any other services owned by ifanr, you have to
        accept our agreement and privacy policy. Therefore, our lawful basis for collecting
        personal data is consent.\n

        \t\t\t\tWe use analytics services to improve the product and troubleshoot customer issues.\n

        \t\t\t\tYou may withdraw your consent and delete your account at any time by contacting
        our designated DPO.\n

        Sub-Processors\n\n\n

        \t\t\t\t北京光环新网科技股份有限公司 (China)\n
        \t\t\t\t宁夏西云数据科技有限公司 (China)\n
        \t\t\t\t深圳市腾讯计算机系统有限公司 (China)\n
        \t\t\t\t上海致趣广告有限公司 (China)\n
        \t\t\t\t北京微梦创科网络技术有限公司 (China)\n
        \t\t\t\t美味书签（北京）信息技术有限公司 (China)\n
        \t\t\t\t北京锐讯灵通科技有限公司 (China)\n
        \t\t\t\t第四范式（北京）技术有限公司 (China)\n
        \t\t\t\tGoogle LLC (USA)\n
        \t\t\t\tNew Relic (USA)\n
        \t\t\t\tSentry (USA)\n
        \t\t\t\tAlgolia (USA)\n\n\n

        十七、【其他】\n
        \t\t\t\t如果您对本协议或本服务有意见或建议，可与爱范儿客户服务部门联系，我们会给予您必要的帮助。\n\n\n
    </string>
    <string name="user_contract_signature">爱范儿科技股份有限公司</string>
    <string name="user_contract_title">用户协议</string>
</resources>