<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.signin.wechat.SignInByWechatActivity">

    <com.ifanr.tangzhi.ui.icons.IcBClose
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingTop="23dp"
        android:paddingLeft="30dp"
        android:paddingBottom="10dp"
        android:paddingRight="30dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/base_35"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="@string/sign_in_title"
        app:layout_constraintTop_toBottomOf="@id/close"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toLeftOf="@id/left"
        />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/base_88"
        android:textSize="16sp"
        android:text="@string/sign_in_sub_title"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toLeftOf="@id/left"
        />

    <com.ifanr.tangzhi.ui.signin.widget.FormButton
        android:id="@+id/wechat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/left"
        app:layout_constraintRight_toRightOf="@id/right"
        app:layout_constraintTop_toBottomOf="@id/subTitle"
        android:layout_marginTop="75dp"
        android:text="@string/sign_in_wechat"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/left"
        app:layout_constraintRight_toRightOf="@id/right"
        app:layout_constraintTop_toBottomOf="@id/wechat"
        android:layout_marginTop="16dp"
        android:background="@drawable/sign_in_email_bg"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >

        <TextView
            android:id="@+id/email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/base_12"
            android:text="@string/sign_in_email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/base_88"
            android:textSize="10sp"
            android:text="@string/sign_in_email_tip"
            app:layout_constraintTop_toBottomOf="@id/email_title"
            android:layout_marginTop="2dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/base_88"
        android:text="@string/sign_in_by_phone"
        android:textSize="14sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/left"
        app:layout_constraintRight_toRightOf="@id/right"
        />

</androidx.constraintlayout.widget.ConstraintLayout>